--- a/static/src/_ui.scss
+++ b/static/src/_ui.scss
@@ -11,7 +11,6 @@ $width: 50px;
 
 a {
   text-decoration: inherit;
-  -webkit-appearance: button;
 }
 
 .ui-header {
